refactor: format with prettier
